--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -1,7 +1,14 @@
 body {
   font-family: 'Source Sans Pro', sans-serif;
+  font-size: 20px;
+  line-height: 1.5;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Merriweather', serif;
+  margin: .75em 0px;
+}
+
+p {
+  margin: 1.5em 0px;
 }
