--- a/src/layouts/base.pug
+++ b/src/layouts/base.pug
@@ -3,9 +3,11 @@ html(land='en')
   head
     title Johannes Thiel - Frontend Web Developer
     meta(name='viewport' content='width=device-width,initial-scale=1')
+    link(rel='stylesheet' href='/css/main.css')
   body
     include includes/header.pug
 
     | !{content}
 
     include includes/footer.pug
+    script(src='/js/main.js')
