--- a/src/pages/index..pug
+++ b/src/pages/index..pug
@@ -5,3 +5,9 @@ dynamicPermalink: false
 ---
 
 h1 Index
+p Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti aspernatur dolor, sit ipsum eos magnam illum rerum ex modi adipisci sint consequuntur laborum beatae ea iure quo ipsam unde quia.
+p 
+  | Lorem ipsum dolor sit amet co 
+  a(href='/') Home
+  |  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat soluta non reprehenderit nulla, est ad dicta aliquid perspiciatis nostrum praesentium quis fugiat accusantium assumenda voluptates molestiae repellat vel eligendi? Rem.
+
