--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,4 @@
-* {
-  box-sizing: border-box;
-}
+@import 'base/variables';
+@import 'base/base';
+@import 'base/typography';
+@import 'base/links';
