--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,4 +1,10 @@
+@import 'utils/helper';
+@import 'utils/flex';
+
 @import 'base/variables';
 @import 'base/base';
 @import 'base/typography';
 @import 'base/links';
+
+@import 'components/header';
+@import 'components/hamburger';
