--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -2,7 +2,7 @@
   --text-color: #333;
   --heading-color: #222;
   --background-color: #fff;
-
+  --border-color: rgba(0, 0, 0, .2);
   --primary-color: #1abc9c;
 }
 
@@ -10,4 +10,5 @@
   --text-color: #ddd;
   --heading-color: #eee;
   --background-color: #333;
+  --border-color: rgba(255, 255, 255, .2);
 }
