--- a/src/includes/footer.pug
+++ b/src/includes/footer.pug
@@ -1,1 +1,14 @@
-footer
+footer.footer
+  .footer__col
+    strong © 2019
+    a(href='https://johannesthiel.me') Johannes Thiel
+  .footer__col
+    strong Social
+    div
+      a(href='https://github.com/ToxicJojo') Github
+      |  / 
+      a(href='https://twitter.com/ToxicJojo') Twitter
+  .footer__col
+    strong Legal 
+    div
+      a(href='/imprint') Imprint 
