--- a/src/layouts/base.pug
+++ b/src/layouts/base.pug
@@ -10,7 +10,8 @@ html(lang='en')
   body
     include includes/header.pug
 
-    | !{content}
+    main
+      | !{content}
 
     include includes/footer.pug
     script(src='/js/main.js')
