--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -3,7 +3,13 @@
 }
 
 body {
+  @include flex-col;
   margin: 0;
+  min-height: 100vh;
   background-color: var(--background-color);
   transition: all ease-in-out .25s;
+}
+
+main {
+  flex-grow: 1;
 }
