--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,3 +1,11 @@
-* {
-  box-sizing: border-box;
-}
+@import 'utils/helper';
+@import 'utils/flex';
+
+@import 'base/variables';
+@import 'base/base';
+@import 'base/typography';
+@import 'base/links';
+
+@import 'components/header';
+@import 'components/hamburger';
+@import 'components/footer';
