Basic project page

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -5,7 +5,10 @@
 @import 'base/base';
 @import 'base/typography';
 @import 'base/links';
+@import 'base/layout';
 
 @import 'components/header';
 @import 'components/hamburger';
 @import 'components/footer';
+@import 'components/project-card';
+@import 'components/project-row';
