--- a/src/assets/styles/components/_project-row.scss
+++ b/src/assets/styles/components/_project-row.scss
@@ -5,17 +5,26 @@
 
 .project-list {
   @include flex-col;
+  @include flex-row;
+  flex-wrap: wrap;
   list-style: none;
   margin: 0;
   margin-bottom: -32px;
   padding: 0;
+
+  li {
+    flex-basis: 50%;
+    flex-grow: 1;
+  }
 }
 
 .project-row {
   @include flex-col;
+  height: 100%;
   align-items: center;
   padding: 32px;
   border-bottom: none;
+  box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
 }
 
 .project-row__image {
