Preventing mobile menu from getting scrolled away

--- a/src/assets/styles/components/_hamburger.scss
+++ b/src/assets/styles/components/_hamburger.scss
@@ -6,6 +6,8 @@
   border-radius: 50px;
 
   &.hamburger--open {
+    position: fixed;
+    right: 48px;
     background-color: transparent;
     transform: rotate(180deg);
 
