--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -86,7 +86,7 @@
     opacity: 1;
     align-items: flex-start;
     justify-content: center;
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     top: 0;
