--- a/src/includes/header.pug
+++ b/src/includes/header.pug
@@ -1,14 +1,10 @@
 header.header
   a.header__logo(href='/')
-    svg.header__icon(width='205mm', height='181.65mm', version='1.1', viewBox='0 0 205 181.65', xmlns='http://www.w3.org/2000/svg', xmlns:osb='http://www.openswatchbook.org/uri/2009/osb', xmlns:xlink='http://www.w3.org/1999/xlink')
-      g(transform='translate(-3.2611 -48.72)')
-        rect(x='112.53', y='48.856', width='29.272', height='181.55', stroke-width='.22522')
-        rect(x='136.32', y='48.856', width='71.945', height='32.56', stroke-width='.25144')
-        text(x='31.372023', y='77.395828', fill='#000000', font-family='sans-serif', font-size='50.8px', letter-spacing='0px', stroke-width='.26458', word-spacing='0px', style='line-height:1.25', xml:space='preserve')
-          tspan(x='31.372023', y='123.74221', font-size='50.8px', stroke-width='.26458', style='line-height:0.44999999')
-        text(transform='scale(1.0102 .98991)', x='-0.12560374', y='226.5119', fill='#000000', fill-opacity='0', font-family="'Microsoft Sans Serif'", font-size='243.13px', letter-spacing='0px', stroke='#000000', stroke-width='7.416', word-spacing='0px', style='line-height:1.25', xml:space='preserve')
-          tspan(x='-0.12560374', y='226.5119', fill='#000000', fill-opacity='0', font-family="'Microsoft Sans Serif'", stroke='#000000', stroke-width='7.416') J
-        rect(x='83.491', y='48.152', width='15.771', height='7.5471', fill='#fff')
+    svg.header__icon(width='204.93mm', height='181.85mm', version='1.1', viewBox='0 0 204.93 181.85', xmlns='http://www.w3.org/2000/svg', xmlns:osb='http://www.openswatchbook.org/uri/2009/osb', xmlns:xlink='http://www.w3.org/1999/xlink')
+      g(transform='translate(-3.332 -48.722)')
+        path(d='m113.2 48.722h28.604v181.65h-28.604z', stroke-width='.2227')
+        path(d='m141.11 48.755h67.153v32.661h-67.153z', stroke-width='.24329')
+        path(d='m101.99 170.52q0 31.355-12.122 44.526-12.122 13.055-35.784 13.055-21.214 0-33.569-12.938-12.355-12.938-12.355-34.152v-4.5458h22.729q0 31.238 23.196 31.238 12.239 0 18.766-6.8771t6.5274-29.14v-117.38h22.613z', fill-opacity='0', stroke-width='9.8368')
   nav.header__nav
     ul.header__link-list
         li
