--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -8,10 +8,12 @@
   display: flex;
   align-items: center;
   border: none;
+  fill: currentColor;
+  stroke: currentColor;
 }
 
 .header__icon {
-  width: 32px;
+  width: 64px;
   height: 32px;
   color: var(--text-color);
 }
