--- a/src/assets/styles/base/_variables.scss
+++ b/src/assets/styles/base/_variables.scss
@@ -3,7 +3,7 @@
   --heading-color: #222;
   --background-color: #fff;
   --border-color: rgba(0, 0, 0, .2);
-  --primary-color: #1abc9c;
+  --primary-color: #00866b;
 }
 
 [data-theme='dark'] {
