--- a/src/assets/styles/components/_project-row.scss
+++ b/src/assets/styles/components/_project-row.scss
@@ -13,9 +13,16 @@
   padding: 0;
 
   li {
-    flex-basis: 50%;
+    flex-basis: 100%;
     flex-grow: 1;
   }
+
+  @media (min-width: 1100px) {
+    li {
+      flex-basis: 50%;
+    }
+  }
+
 }
 
 .project-row {
@@ -31,6 +38,7 @@
   max-width: 729px;
   width: 100%;
   height: auto;
+  max-height: 344px;
   border-radius: 16px;
   margin: 32px;
   box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
@@ -52,7 +60,7 @@
   @include flex-row;
   justify-content: center;
   width: 100%;
-
+  margin-top: auto;
 }
 
 .project-row__link {
@@ -81,7 +89,7 @@
 .project-row__tech {
   margin: 16px;
   padding: 8px 16px;
-  background-color: #ddd;
+  background-color: #fff;
   border-radius: 32px;
   text-transform: capitalize;
   font-weight: bold;
