--- a/src/pages/projects.pug
+++ b/src/pages/projects.pug
@@ -14,10 +14,7 @@ section
           ul.project-row__tech-list
             each tech in project.data.tech
               li.project-row__tech(style=`color: #${project.data.color}`)= tech
-          img(src=project.data.image).project-row__image
-          //ul.project-row__tech-list
-            each tech in project.data.tech
-              li.project-row__tech(style=`color: #${project.data.color}`)= tech
+          img(src=project.data.image alt=`Preview image for ${project.data.title}`).project-row__image
           p.project-row__description= project.data.description
           .project-row__links
             a.project-row__link(href=project.data.website) Website
