--- a/src/pages/projects.pug
+++ b/src/pages/projects.pug
@@ -4,8 +4,10 @@ permalink: projects.html
 dynamicPermalink: false
 ---
 
-section 
+section.project-section
   h1.project-heading Projects
+  p A collection of projects I have worked on. There is more stuff including this website on my 
+    a(href='https://github.com/ToxicJojo') Github
   ul.project-list
     each project in collections.projects
       li
