--- a/src/pages/projects.pug
+++ b/src/pages/projects.pug
@@ -4,8 +4,10 @@ permalink: projects.html
 dynamicPermalink: false
 ---
 
-section 
+section.project-section
   h1.project-heading Projects
+  p A collection of projects I have worked on. There is more stuff including this website on my 
+    a(href='https://github.com/ToxicJojo') Github
   ul.project-list
     each project in collections.projects
       li
@@ -14,10 +16,7 @@ section
           ul.project-row__tech-list
             each tech in project.data.tech
               li.project-row__tech(style=`color: #${project.data.color}`)= tech
-          img(src=project.data.image).project-row__image
-          //ul.project-row__tech-list
-            each tech in project.data.tech
-              li.project-row__tech(style=`color: #${project.data.color}`)= tech
+          img(src=project.data.image alt=`Preview image for ${project.data.title}`).project-row__image
           p.project-row__description= project.data.description
           .project-row__links
             a.project-row__link(href=project.data.website) Website
