--- a/src/assets/styles/components/_project-row.scss
+++ b/src/assets/styles/components/_project-row.scss
@@ -1,5 +1,12 @@
-.project-heading {
+.project-section {
   text-align: center;
+
+  p {
+    margin: 32px;
+  }
+}
+
+.project-heading {
   margin: 32px;
 }
 
@@ -10,12 +17,20 @@
   list-style: none;
   margin: 0;
   margin-bottom: -32px;
+  margin-top: 32px;
   padding: 0;
 
   li {
-    flex-basis: 50%;
+    flex-basis: 100%;
     flex-grow: 1;
   }
+
+  @media (min-width: 1100px) {
+    li {
+      flex-basis: 50%;
+    }
+  }
+
 }
 
 .project-row {
@@ -24,13 +39,13 @@
   align-items: center;
   padding: 32px;
   border-bottom: none;
-  box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
 }
 
 .project-row__image {
   max-width: 729px;
   width: 100%;
   height: auto;
+  max-height: 344px;
   border-radius: 16px;
   margin: 32px;
   box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
@@ -52,7 +67,7 @@
   @include flex-row;
   justify-content: center;
   width: 100%;
-
+  margin-top: auto;
 }
 
 .project-row__link {
@@ -81,7 +96,7 @@
 .project-row__tech {
   margin: 16px;
   padding: 8px 16px;
-  background-color: #ddd;
+  background-color: #fff;
   border-radius: 32px;
   text-transform: capitalize;
   font-weight: bold;
