--- a/src/includes/header.pug
+++ b/src/includes/header.pug
@@ -1,14 +1,10 @@
 header.header
-  a.header__logo(href='/')
-    svg.header__icon(width='205mm', height='181.65mm', version='1.1', viewBox='0 0 205 181.65', xmlns='http://www.w3.org/2000/svg', xmlns:osb='http://www.openswatchbook.org/uri/2009/osb', xmlns:xlink='http://www.w3.org/1999/xlink')
-      g(transform='translate(-3.2611 -48.72)')
-        rect(x='112.53', y='48.856', width='29.272', height='181.55', stroke-width='.22522')
-        rect(x='136.32', y='48.856', width='71.945', height='32.56', stroke-width='.25144')
-        text(x='31.372023', y='77.395828', fill='#000000', font-family='sans-serif', font-size='50.8px', letter-spacing='0px', stroke-width='.26458', word-spacing='0px', style='line-height:1.25', xml:space='preserve')
-          tspan(x='31.372023', y='123.74221', font-size='50.8px', stroke-width='.26458', style='line-height:0.44999999')
-        text(transform='scale(1.0102 .98991)', x='-0.12560374', y='226.5119', fill='#000000', fill-opacity='0', font-family="'Microsoft Sans Serif'", font-size='243.13px', letter-spacing='0px', stroke='#000000', stroke-width='7.416', word-spacing='0px', style='line-height:1.25', xml:space='preserve')
-          tspan(x='-0.12560374', y='226.5119', fill='#000000', fill-opacity='0', font-family="'Microsoft Sans Serif'", stroke='#000000', stroke-width='7.416') J
-        rect(x='83.491', y='48.152', width='15.771', height='7.5471', fill='#fff')
+  a.header__logo(href='/' aria-hidden='true')
+    svg.header__icon(width='204.93mm', height='181.85mm', version='1.1', viewBox='0 0 204.93 181.85', xmlns='http://www.w3.org/2000/svg', xmlns:osb='http://www.openswatchbook.org/uri/2009/osb', xmlns:xlink='http://www.w3.org/1999/xlink')
+      g(transform='translate(-3.332 -48.722)')
+        path(d='m113.2 48.722h28.604v181.65h-28.604z', stroke-width='.2227')
+        path(d='m141.11 48.755h67.153v32.661h-67.153z', stroke-width='.24329')
+        path(d='m101.99 170.52q0 31.355-12.122 44.526-12.122 13.055-35.784 13.055-21.214 0-33.569-12.938-12.355-12.938-12.355-34.152v-4.5458h22.729q0 31.238 23.196 31.238 12.239 0 18.766-6.8771t6.5274-29.14v-117.38h22.613z', fill-opacity='0', stroke-width='9.8368')
   nav.header__nav
     ul.header__link-list
         li
@@ -26,6 +22,6 @@ header.header
         path(fill="currentColor" d="M283.211 512c78.962 0 151.079-35.925 198.857-94.792 7.068-8.708-.639-21.43-11.562-19.35-124.203 23.654-238.262-71.576-238.262-196.954 0-72.222 38.662-138.635 101.498-174.394 9.686-5.512 7.25-20.197-3.756-22.23A258.156 258.156 0 0 0 283.211 0c-141.309 0-256 114.511-256 256 0 141.309 114.511 256 256 256z")
       svg#sun-icon.header__icon.hidden(aria-hidden="true" focusable="false" data-prefix="fas" data-icon="sun" class="svg-inline--fa fa-sun fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512")
         path(fill="currentColor" d="M256 160c-52.9 0-96 43.1-96 96s43.1 96 96 96 96-43.1 96-96-43.1-96-96-96zm246.4 80.5l-94.7-47.3 33.5-100.4c4.5-13.6-8.4-26.5-21.9-21.9l-100.4 33.5-47.4-94.8c-6.4-12.8-24.6-12.8-31 0l-47.3 94.7L92.7 70.8c-13.6-4.5-26.5 8.4-21.9 21.9l33.5 100.4-94.7 47.4c-12.8 6.4-12.8 24.6 0 31l94.7 47.3-33.5 100.5c-4.5 13.6 8.4 26.5 21.9 21.9l100.4-33.5 47.3 94.7c6.4 12.8 24.6 12.8 31 0l47.3-94.7 100.4 33.5c13.6 4.5 26.5-8.4 21.9-21.9l-33.5-100.4 94.7-47.3c13-6.5 13-24.7.2-31.1zm-155.9 106c-49.9 49.9-131.1 49.9-181 0-49.9-49.9-49.9-131.1 0-181 49.9-49.9 131.1-49.9 181 0 49.9 49.9 49.9 131.1 0 181z")
-    button#hamburger.hamburger-button
+    button#hamburger.hamburger-button(aria-hidden='true')
       .hamburger
     
