--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -8,6 +8,7 @@
 @import 'base/layout';
 
 @import 'components/header';
+@import 'components/hero';
 @import 'components/hamburger';
 @import 'components/footer';
 @import 'components/project-card';
