Added link to twitter

--- a/src/layouts/base.pug
+++ b/src/layouts/base.pug
@@ -8,6 +8,7 @@ html(lang='en')
     link(href='https://fonts.googleapis.com/css?family=Merriweather|Source+Sans+Pro&display=swap' rel='stylesheet')
     // Indie auth
     link(rel='me' href='https://github.com/ToxicJojo')
+    link(rel='me' href='https://twitter.com/ToxicJojo')
     script.
       ((localStorage.getItem('theme') === 'true') && (document.documentElement.setAttribute('data-theme', 'dark')))
   body
