--- a/src/layouts/base.pug
+++ b/src/layouts/base.pug
@@ -6,6 +6,9 @@ html(lang='en')
     meta(name='description' content='Johannes Thiel is a M.Sc. student at Heinrich-Heine University Düsseldorf and frontend developer.')
     link(rel='stylesheet' href='/css/main.css')
     link(href='https://fonts.googleapis.com/css?family=Merriweather|Source+Sans+Pro&display=swap' rel='stylesheet')
+    // Indie auth
+    link(rel='me' href='https://github.com/ToxicJojo')
+    link(rel='me' href='https://twitter.com/ToxicJojo')
     script.
       ((localStorage.getItem('theme') === 'true') && (document.documentElement.setAttribute('data-theme', 'dark')))
   body
