Added hcard name und url info

--- a/src/includes/footer.pug
+++ b/src/includes/footer.pug
@@ -1,7 +1,7 @@
-footer.footer
+footer.footer.h-card
   .footer__col
     strong © 2019
-    a(href='https://johannesthiel.me') Johannes Thiel
+    a.p-name.u-url(href='https://johannesthiel.me') Johannes Thiel
   .footer__col
     strong Social
     div
