Added img, note and email to h-card info

--- a/src/pages/imprint.pug
+++ b/src/pages/imprint.pug
@@ -23,7 +23,7 @@ section.container
     strong Kontakt:
     br
     | E-Mail: 
-    a(href='mailto:nhsbjojo@gmail.com') nhsbjojo@gmail.com
+    a(href='mailto:hi@johannesthiel.me') hi@johannesthiel.me
     br
   p
     strong Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV:
