--- a/src/layouts/base.pug
+++ b/src/layouts/base.pug
@@ -3,7 +3,7 @@ html(lang='en')
   head
     title Johannes Thiel - Frontend Web Developer
     meta(name='viewport' content='width=device-width,initial-scale=1')
-    meta(name='description' content='Johannes Thiel is a M.Sc. student at Heinrich-Heine University Düsseldorf and frontend developer.')
+    meta(name='description' content='Johannes Thiel is a Computer Science student at Heinrich-Heine University Düsseldorf and frontend developer.')
     link(rel='stylesheet' href='/css/main.css')
     link(href='https://fonts.googleapis.com/css?family=Merriweather|Source+Sans+Pro&display=swap' rel='stylesheet')
     // Indie auth
