--- a/src/includes/footer.pug
+++ b/src/includes/footer.pug
@@ -1,7 +1,13 @@
-footer.footer
+footer.footer.h-card
+  .footer__col.hidden
+    img.u-photo(src='https://avatars3.githubusercontent.com/u/2575882')
+    p.p-note Johannes Thiel is a Computer Science student at Heinrich-Heine University Düsseldorf and frontend developer.
   .footer__col
     strong © 2019
-    a(href='https://johannesthiel.me') Johannes Thiel
+    a.p-name.u-url(href='https://johannesthiel.me') Johannes Thiel
+  .footer__col
+    strong Contact
+    a.u-email(href='mailto:hi@johannesthiel.me' rel='me') hi@johannesthiel.me
   .footer__col
     strong Social
     div
