--- a/src/assets/styles/components/_project-row.scss
+++ b/src/assets/styles/components/_project-row.scss
@@ -42,13 +42,17 @@
 }
 
 .project-row__image {
-  max-width: 729px;
-  width: 100%;
-  height: auto;
-  max-height: 344px;
-  border-radius: 16px;
-  margin: 32px;
-  box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
+
+  margin-top: 32px;
+
+  img {
+    border-radius: 16px;
+    box-shadow: 0 1px 6px 0 rgba(0,0,0,.12), 0 1px 6px 0 rgba(0,0,0,.12);
+    max-width: 729px;
+    width: 100%;
+    height: auto;
+    max-height: 344px;
+  }
 }
 
 
